# Automotive-Identity-and-Access-Control-System

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build_output.txt
.git-rewrite/: backup-refs  commit  index  message  parse  revs  tree-state
.git-rewrite/t/: LICENSE  README.md
attacker_artifacts/FOB-0001/replay_attack/: attacker_clone_evidence.json  protected_clone_metadata.json  protected_cloned_signal.enc
attacker_artifacts/FOB-5AE984AE/no_aiacs_signal_clone_attack/: attacker_clone_evidence.json  insecure_cloned_signal.json
attacker_artifacts/FOB-5E473D31/no_aiacs_signal_clone_attack/: attacker_clone_evidence.json  insecure_cloned_signal.json
attacker_artifacts/FOB-6CD8D52A/: attacker_clone_evidence.json  insecure_cloned_signal.json  protected_clone_metadata.json  protected_cloned_signal.enc
attacker_artifacts/FOB-87C41D3A/replay_attack/: attacker_clone_evidence.json  protected_clone_metadata.json  protected_cloned_signal.enc
attacker_artifacts/FOB-98C056C2/replay_attack/: attacker_clone_evidence.json  protected_clone_metadata.json  protected_cloned_signal.enc
src/: lib.rs  main.rs
src/access/: mod.rs
src/app_controller/: mod.rs
src/attacks/: mod.rs
src/auth/: mod.rs
src/ca/: mod.rs
src/cloud_storage/: mod.rs
src/crypto/: mod.rs
src/keyfob/: mod.rs
src/session/: mod.rs
src/vehicle/: mod.rs
