[package]
name = "aiacs"
version = "0.1.0"
edition = "2021"
default-run = "aiacs"

[dependencies]
ed25519-dalek = "2.1"
aes-gcm = "0.10"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "tls-rustls", "chrono", "uuid", "json"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
x509-cert = "0.2"
sha2 = "0.10"
base64 = "0.22"
chrono = "0.4"
thiserror = "1.0"
iced = { version = "0.12", features = ["debug", "svg"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
hkdf = "0.12"

[profile.release]
opt-level = 3
